--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,4 +7,4 @@
     </li>
   <% end %>
 </ul>
-<li><%= link_to 'New article', new_article_path, class: 'new_article'%></li>
+<%= link_to 'New article', new_article_path, class: 'new_article'%>
