--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,4 @@
 <p><%=@article.body%></h1>
 <p>Author: <%=@article.author%></h1>
 <p><%= link_to '<< Go back to articles', articles_path %></p>
+<p><%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %></p>
