--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%=@article.title%></h1>
 <p><%=@article.body%></h1>
 <p>Author: <%=@article.author%></h1>
-<h3>Comments</h3>
+<h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
 <p><%= link_to '<< Go back to articles', articles_path %></p>
