--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,11 +1,11 @@
-<h1>Type your comment</h1>
+<h3>Type your comment</h3>
 <%= form_for [ @article, @comment ] do |f| %>
   <p>
-    <%= f.label :author_name %><br/>
+    <%= f.label :author_name, 'Your Name' %><br/>
     <%= f.text_field :author_name %>
   </p>
   <p>
-    <%= f.label :body %><br/>
+    <%= f.label :body, 'Your Comment' %><br/>
     <%= f.text_area :body %>
   </p>
   <p>
