Include tag_list method

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,6 +17,10 @@
     <%= f.text_field :author %>
   </p>
   <p>
+    <%= f.label :tag_list %><br />
+    <%= f.text_field :tag_list %>
+  </p>
+  <p>
     <%= f.submit %>
   </p>
 <% end %>
