Add tags and make them work properly

--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -2,7 +2,10 @@
 
 <ul>
   <% @tag.articles.each do |article| %>
-    <li><%= link_to article.title, article_path(article) %>  <%= link_to 'delete', tag_path(article.tags), method: :delete %></li>
+    <li><%= link_to article.title, article_path(article) %></li>
   <% end %>
 </ul>
+
+<br/><br/>
+<%= link_to 'delete', tag_path(@tag), method: :delete %>
 
