--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -7,5 +7,5 @@
 </ul>
 
 <br/><br/>
-<%= link_to 'delete', tag_path(@tag), method: :delete %>
+<%= link_to 'delete', tag_path(@tag), method: :delete, data: {confirm: "Are you sure, you want to delete #{@tag.name}?"} %>
 
