--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,9 +21,13 @@
     <%= f.text_field :tag_list %>
   </p>
   <p>
+    <% if @article.image.exists? %>
+      <%= image_tag @article.image.url(:thumb) %><br/>
+    <% end %>
     <%= f.label :image, "Attach an Image" %><br />
     <%= f.file_field :image %>
   </p>
+
   <p>
     <%= f.submit %>
   </p>
